fix webshop 2fa auth page

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -3,7 +3,6 @@
         "example": "أدخل عنوان بريد إلكتروني صالح، على سبيل المثال <strong>naam@voorbeeld.com</strong>"
     },
     "auth": {
-        "": "المصادقة الثنائية",
         "back": "رجوع",
         "back_start": "العودة إلى تسجيل الدخول",
         "choose_option": "اختر خياراً",
@@ -42,7 +41,8 @@
         },
         "terms_link": {
             "text": "أوافق على <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">الشروط والأحكام</a>"
-        }
+        },
+        "2fa_title": "المصادقة الثنائية"
     },
     "blocks": {
         "block_exception": {
@@ -422,11 +422,8 @@
             "sort": "فرز",
             "payment_option_qr": "إظهار رمز الاستجابة السريعة لدى المزود",
             "payment_option_reservation": "احجز عبر الإنترنت",
-            "payment_options": "خيارات الدفع",
-            "payment_options_info": "اقرأ المزيد عن خيارات الدفع",
             "price": "السعر (€)",
             "price_from": "من",
-            "price_to": "إلى",
             "payment_option_extra_payment": "الدفع عبر الإنترنت باستخدام iDeal",
             "price_type_option_discount_fixed": "الخصم باليورو",
             "price_type_option_discount_percentage": "الخصم بالنسبة المئوية",
@@ -435,7 +432,10 @@
             "price_type_option_regular": "السعر",
             "price_type_options": "نوع العرض",
             "price_type_options_info": "اقرأ المزيد عن أنواع العروض",
-            "category": "الفئات"
+            "category": "الفئات",
+            "payment_options": "خيارات الدفع",
+            "payment_options_info": "اقرأ المزيد عن خيارات الدفع",
+            "price_to": "إلى"
         },
         "sort": {
             "created_at_asc": "الأقدم أولاً",
@@ -740,6 +740,9 @@
             },
             "westerkwartier": {
                 "funds": "البرطمانات"
+            },
+            "fijnder": {
+                "funds": "المخططات"
             }
         },
         "user_menu": {
@@ -1210,6 +1213,9 @@
             },
             "winterswijk": {
                 "title": "تفعيل"
+            },
+            "fijnder": {
+                "title": "المخططات"
             }
         },
         "header": {
@@ -1740,6 +1746,9 @@
             },
             "winterswijk": {
                 "start_email": "بدء التفعيل"
+            },
+            "fijnder": {
+                "start_email": "تفعيل"
             }
         }
     },
@@ -3416,7 +3425,6 @@
             "notifications": "الإشعارات",
             "payouts": "المدفوعات",
             "profile": "البيانات",
-            "records": "البيانات الشخصية",
             "reimbursements": "استرداد التكاليف",
             "reservations": "الحجوزات",
             "security": "الأمن",
