--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -129,7 +129,6 @@
         "example": "Введите действительный адрес электронной почты, например, <strong>naam@voorbeeld.com</strong>."
     },
     "auth": {
-        "": "Двухфакторная аутентификация",
         "back": "Назад",
         "back_start": "Назад к входу в систему",
         "choose_option": "Выберите вариант",
@@ -168,7 +167,8 @@
         },
         "terms_link": {
             "text": "Я согласен с <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">условиями и положениями</a>"
-        }
+        },
+        "2fa_title": "Двухфакторная аутентификация"
     },
     "block_funds": {
         "labels": {
@@ -764,6 +764,9 @@
             },
             "winterswijk": {
                 "title": "Активируйте"
+            },
+            "fijnder": {
+                "title": "Схемы"
             }
         },
         "header": {
@@ -2348,11 +2351,8 @@
             "sort": "Сортировать",
             "payment_option_qr": "Показать QR-код у провайдера",
             "payment_option_reservation": "Забронировать онлайн",
-            "payment_options": "Варианты оплаты",
-            "payment_options_info": "Подробнее о вариантах оплаты",
             "price": "Цена (€)",
             "price_from": "С сайта",
-            "price_to": "На",
             "payment_option_extra_payment": "Оплата онлайн с помощью iDeal",
             "price_type_option_discount_fixed": "Скидка в евро",
             "price_type_option_discount_percentage": "Скидка в процентах",
@@ -2361,7 +2361,10 @@
             "price_type_option_regular": "Цена",
             "price_type_options": "Тип предложения",
             "price_type_options_info": "Подробнее о типах предложений",
-            "category": "Категории"
+            "category": "Категории",
+            "payment_options": "Варианты оплаты",
+            "payment_options_info": "Подробнее о вариантах оплаты",
+            "price_to": "На"
         },
         "sort": {
             "created_at_asc": "Самый старый первый",
@@ -2390,7 +2393,6 @@
             "notifications": "Уведомления",
             "payouts": "Выплаты",
             "profile": "Данные",
-            "records": "Персональные данные",
             "reimbursements": "Возмещение затрат",
             "reservations": "Бронирование",
             "security": "Безопасность",
@@ -2998,6 +3000,9 @@
             },
             "winterswijk": {
                 "start_email": "Начало активации"
+            },
+            "fijnder": {
+                "start_email": "Активируйте"
             }
         }
     },
@@ -3204,6 +3209,9 @@
             },
             "westerkwartier": {
                 "funds": "Кувшины"
+            },
+            "fijnder": {
+                "funds": "Схемы"
             }
         },
         "user_menu": {
